--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=spring-shopping-cart
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shopping-cart?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://database-1.c7qg82c2uxmm.ap-southeast-2.rds.amazonaws.com:3307/shopDB
+#spring.datasource.username=admin
+#spring.datasource.password=password
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping-cart
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
