fix application properies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.datasource.password=${LOCAL_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -34,3 +33,6 @@ spring.mail.username=${MAIL_USERNAME}
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+vnpay.tmnCode=${VNPAY_TMN_CODE}
+vnpay.secretKey=${VNPAY_SECRET_KEY}
