--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ spring.servlet.multipart.max-request-size=5MB
 
 vnpay.tmnCode=${VNPAY_TMN_CODE}
 vnpay.secretKey=${VNPAY_SECRET_KEY}
+
+gg.identity.clientId=${GG_CLIENT_ID}
+gg.identity.clientSecret=${GG_CLIENT_SECRET}
+gg.identity.redirectUri=http://localhost:5173/auth
