--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 spring.application.name=spring-shopping-cart
 server.port=8080
 
-#spring.datasource.url=${AWS_DB}
-#spring.datasource.username=${AWS_DB_USERNAME}
-#spring.datasource.password=${AWS_DB_PASSWORD}
-
 spring.datasource.url=${LOCAL_DB}
 spring.datasource.username=${LOCAL_DB_USERNAME}
 spring.datasource.password=${LOCAL_DB_PASSWORD}
@@ -36,6 +32,10 @@ spring.servlet.multipart.max-request-size=5MB
 
 vnpay.tmnCode=${VNPAY_TMN_CODE}
 vnpay.secretKey=${VNPAY_SECRET_KEY}
+
+payos.clientId=${PAYOS_CLIENT_ID}
+payos.apiKey=${PAYOS_API_KEY}
+payos.checksumKey=${PAYOS_CHECKSUM_KEY}
 
 gg.identity.clientId=${GG_CLIENT_ID}
 gg.identity.clientSecret=${GG_CLIENT_SECRET}
