test docker, aws db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=spring-shopping-cart
 server.port=8080
 
-spring.datasource.url=${LOCAL_DB}
-spring.datasource.username=${LOCAL_DB_USERNAME}
-spring.datasource.password=${LOCAL_DB_PASSWORD}
+#spring.datasource.url=${LOCAL_DB}
+#spring.datasource.username=${LOCAL_DB_USERNAME}
+#spring.datasource.password=${LOCAL_DB_PASSWORD}
+#AwsDB
+spring.datasource.url=${AWS_DB}
+spring.datasource.username=${AWS_DB_USERNAME}
+spring.datasource.password=${AWS_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -17,7 +21,8 @@ cloudinary.api_secret=${API_SECRET}
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
-client.domain=http://localhost:5173/
+#client.domain=http://localhost:5173/
+client.domain=https://sb-e-commerce-client.vercel.app/
 
 spring.mail.host=smtp.gmail.com
 spring.mail.password=${MAIL_PASSWORD}
