--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=spring-shopping-cart
 server.port=8080
 
-#spring.datasource.url=${LOCAL_DB}
-#spring.datasource.username=${LOCAL_DB_USERNAME}
-#spring.datasource.password=${LOCAL_DB_PASSWORD}
+spring.datasource.url=${LOCAL_DB}
+spring.datasource.username=${LOCAL_DB_USERNAME}
+spring.datasource.password=${LOCAL_DB_PASSWORD}
 #AwsDB
-spring.datasource.url=${AWS_DB}
-spring.datasource.username=${AWS_DB_USERNAME}
-spring.datasource.password=${AWS_DB_PASSWORD}
+#spring.datasource.url=${AWS_DB}
+#spring.datasource.username=${AWS_DB_USERNAME}
+#spring.datasource.password=${AWS_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
